<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="about_description">Keep track of which episodes you\'ve watched of your favourite TV shows</string>
  <string name="about_license">Episodes is free software licensed under the GNU GPL (version 3 or later). Please file bugs, write code, or do anything else you can to help!</string>
  <string name="about_title">About</string>
  <string name="about_tvdb">TV show information is supplied by TheTVDB.com, and is licensed under the Creative Commons Attribution license. Please contribute information or artwork to TheTVDB.com if you can.</string>
  <string name="about_website">http://github.com/jamienicol/episodes</string>
  <string name="app_name">Episodes</string>
  <string name="adding_show">Adding %s to library</string>
  <string name="back_up_error_message">Error backing up library</string>
  <string name="back_up_success_message">Back up complete: \'%s\'</string>
  <string name="error_adding_show">Error adding %s to library</string>
  <string name="first_aired">First Aired: %s</string>
  <string name="menu_about">About</string>
  <string name="menu_add_show_search_hint">Search for new show</string>
  <string name="menu_add_new_show">Add new show to library</string>
  <string name="menu_add_show">Add show to library</string>
  <string name="menu_back_up">Back up library</string>
  <string name="menu_delete_show">Delete show</string>
  <string name="menu_filter_all">All shows</string>
  <string name="menu_filter_shows_list">Filter shows</string>
  <string name="menu_filter_starred">Starred shows</string>
  <string name="menu_filter_uncompleted">Uncompleted shows</string>
  <string name="menu_mark_season_not_watched">Mark season as not watched</string>
  <string name="menu_mark_season_watched">Mark season as watched</string>
  <string name="menu_mark_show_not_watched">Mark show as not watched</string>
  <string name="menu_mark_show_watched">Mark show as watched</string>
  <string name="menu_refresh_all_shows">Refresh all shows</string>
  <string name="menu_refresh_show">Refresh show</string>
  <string name="menu_restore">Restore from backup</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_star_show">Star show</string>
  <string name="menu_unstar_show">Unstar show</string>
  <string name="pref_auto_refresh_period_title">Refresh frequency</string>
  <string name="pref_auto_refresh_enabled_title">Auto-refresh library</string>
  <string name="pref_auto_refresh_wifi_only_title">Refresh only via Wi-Fi</string>
  <string name="restore_dialog_no_backups_message">No backups found in folder \'%s\'.</string>
  <string name="restore_dialog_title">Restore from backup</string>
  <string name="restore_error_message">Error restoring library</string>
  <string name="restore_success_message">Library restored</string>
  <string name="season_episode_prefix">"%1$02dx%2$02d - "</string>
  <string name="season_name">Season %d</string>
  <string name="season_name_specials">Specials</string>
  <string name="settings_title">Settings</string>
  <string name="show_added">%s added to library</string>
  <string name="show_already_added">%s is already in library</string>
  <string name="show_tab_episodes">Episodes</string>
  <string name="show_tab_review">Review</string>
  <string name="show_tab_next">Next</string>
  <string name="show_tab_notes">Notes</string>
  <string name="show_tab_overview">Overview</string>
  <string name="upcoming_count">(+ %d upcoming)</string>
  <string name="watched_check_box">Watched</string>
  <string name="watched_count">Watched %1$d of %2$d episodes</string>
  <string name="menu_sort_alphabetical">Sort by alphabet</string>
  <string name="ic_menu_sort_list">Sort shows</string>
  <string name="menu_sort_alpha_ascending">A-Z</string>
  <string name="menu_sort_alpha_descending">Z-A</string>
  <string name="menu_sort_rating_ascending">Rating (asc)</string>
  <string name="menu_sort_rating_descending">Rating (desc)</string>
  <string name="menu_sort_runtime">Average Runtime</string>
  <string name="menu_sort_runtime_ascending">Average Runtime (asc)</string>
  <string name="menu_sort_runtime_descending">Average Runtime (desc)</string>
  <string name="menu_sort_watched_ascending">Most Recently Watched (asc)</string>
  <string name="menu_sort_watched_descending">Most Recently Watched (desc)</string>
  <string name="menu_filter_genre_action">Action</string>
  <string name="menu_filter_genre_adventure">Adventure</string>
  <string name="menu_filter_genre_animation">Animation</string>
  <string name="menu_filter_genre_comedy">Comedy</string>
  <string name="menu_filter_genre_crime">Crime</string>
  <string name="menu_filter_genre_drama">Drama</string>
  <string name="menu_filter_genre_family">Family</string>
  <string name="menu_filter_genre_fantasy">Fantasy</string>
  <string name="menu_filter_genre_horror">Horror</string>
  <string name="menu_filter_genre_mystery">Mystery</string>
  <string name="menu_filter_genre_romance">Romance</string>
  <string name="menu_filter_genre_scifi">Science-Fiction</string>
  <string name="menu_filter_genre_suspense">Suspense</string>
  <string name="menu_filter_genre_thriller">Thriller</string>

  <string name="menu_filter_airing">Still Airing</string>



</resources>